--- a/code.ipynb
+++ b/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 629,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 630,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 631,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = np.array_split(x_n, 6)\n",
+    "x_test = x_train[5]\n",
+    "x_train = np.delete(x_train, 5, 0)\n",
+    "\n",
+    "y_train = np.array_split(y_n, 6)\n",
+    "y_test = y_train[5]\n",
+    "y_train = np.delete(y_train, 5, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 632,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,18 +54,18 @@
     "        phi = np.tile(x, [degree+1,1]).T\n",
     "        phi = phi**degrees\n",
     "    else:\n",
-    "        phi = np.append(np.ones((1, x.shape[0])), x.T[indexes], axis=0).T\n",
+    "#         phi = np.append(np.ones((1, x.shape[0])), x.T[indexes], axis=0).T\n",
     "        phi = np.tile(x.T[indexes], [degree,1])\n",
     "        degrees = np.linspace(1, degree+1, phi.shape[0]+1, dtype=int)\n",
     "        degrees = np.delete(degrees, phi.shape[0])\n",
     "        phi = phi.T**degrees\n",
-    "    \n",
+    "        phi = np.c_[phi, np.ones((x.shape[0], 1))]\n",
     "    return phi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 633,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,19 +78,19 @@
     "        rmse = np.sqrt(np.sum((y - y_pred)**2)/y_pred.size)\n",
     "    except np.linalg.LinAlgError:\n",
     "        rmse = 100\n",
-    "    return (w , rmse)"
+    "    \n",
+    "    return (w, rmse)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 634,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_best_attributes(x, y, degree, nb_max_attributes):\n",
+    "def get_best_attributes_from_x(x, y, degree, nb_max_attributes):\n",
     "    x = x.T\n",
     "    best_attributes = np.full((nb_max_attributes), -1)\n",
-    "\n",
     "    for i in range(nb_max_attributes):\n",
     "        best_rmse = 2\n",
     "        id_best_rmse = None\n",
@@ -91,55 +106,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 635,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_best_attributes(x, y, degree, nb_attributes):\n",
+    "    best_indexes = None\n",
+    "    best_rmse = 2\n",
+    "    \n",
+    "    for i in range(len(x)):\n",
+    "        indexes = get_best_attributes_from_x(x[i], y[i], degree, nb_attributes)\n",
+    "        w, rmse = poly_regr(x[i], y[i], indexes, degree)\n",
+    "\n",
+    "        if rmse < best_rmse:\n",
+    "            best_rmse = rmse\n",
+    "            best_indexes = indexes   \n",
+    "            \n",
+    "    return best_indexes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 636,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_all_w(x, y, indexes, degree):\n",
+    "    all_w = np.zeros((len(indexes)*degree+1, len(x)))\n",
+    "\n",
+    "    for i in range(len(x)):\n",
+    "        w, rmse = poly_regr(x[i], y[i], indexes, degree)\n",
+    "        all_w.T[i] = w\n",
+    "        \n",
+    "    return all_w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 637,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "degree = 2\n",
+    "nb_attributes = 5\n",
+    "best_indexes = get_best_attributes(x_train, y_train, degree, nb_attributes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 638,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.556122848172312\n"
+      "0.7208192548835631\n"
      ]
     }
    ],
    "source": [
-    "degree = 3\n",
-    "nb_attributes = 20\n",
-    "\n",
-    "indexes = get_best_attributes(x_n, y_n, degree, nb_attributes)\n",
-    "w, rmse = poly_regr(x_n, y_n, best_attributes, degree)\n",
+    "all_w = get_all_w(x_train, y_train, best_indexes, degree)\n",
+    "phi = get_phi(x_test, best_indexes, degree)\n",
+    "y_pred = phi.dot(all_w)\n",
+    "y_test_pred_avg = np.mean(y_pred, axis=1)\n",
+    "rmse = np.sqrt(np.sum((y_test - y_test_pred_avg)**2)/y_test.size)\n",
     "\n",
     "print(rmse)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 639,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_data(x, y, w, indexes, degree=1):\n",
+    "def test_data(x, y, all_w, indexes, degree=1):\n",
     "    phi = get_phi(x, indexes, degree)\n",
-    "    y_pred_n = phi.dot(w)\n",
-    "    y_pred = (y.std() * y_pred_n) + y.mean()\n",
+    "    y_pred_n = phi.dot(all_w)\n",
+    "    y_test_pred_avg = np.mean(y_pred_n, axis=1)\n",
+    "    y_pred = (y.std() * y_test_pred_avg) + y.mean()\n",
     "    \n",
     "    return y_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 640,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = test_data(test_n, y, w, best_attributes, degree)"
+    "y_pred = test_data(test_n, y, all_w, best_indexes, degree)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 628,
    "metadata": {},
    "outputs": [],
    "source": [
