--- a/code.ipynb
+++ b/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 631,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,20 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 632,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_phi(x, indexes=None, degree=1):\n",
-    "    if degree == 1:\n",
+    "    if indexes is None:\n",
     "        degrees = np.arange(degree+1)\n",
     "        phi = np.tile(x, [degree+1,1]).T\n",
     "        phi = phi**degrees\n",
     "    else:\n",
-    "#         phi = np.append(np.ones((1, x.shape[0])), x.T[indexes], axis=0).T\n",
-    "        phi = np.tile(x.T[indexes], [degree,1])\n",
-    "        degrees = np.linspace(1, degree+1, phi.shape[0]+1, dtype=int)\n",
-    "        degrees = np.delete(degrees, phi.shape[0])\n",
+    "        phi = np.repeat(x.T[indexes], degree, axis=0)\n",
+    "        degrees = []\n",
+    "        for poly in degree:\n",
+    "            degrees = np.append(degrees, np.linspace(1, poly, poly, dtype=int))\n",
     "        phi = phi.T**degrees\n",
     "        phi = np.c_[phi, np.ones((x.shape[0], 1))]\n",
     "    return phi"
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 633,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,58 +84,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 634,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_best_attributes_from_x(x, y, degree, nb_max_attributes):\n",
-    "    x = x.T\n",
-    "    best_attributes = np.full((nb_max_attributes), -1)\n",
-    "    for i in range(nb_max_attributes):\n",
+    "def get_best_att(x, y, x_test, y_test, nb_att_to_get, deg):\n",
+    "    nb_att_in_x = x[0].shape[1]\n",
+    "    indexes_best_att = np.zeros(nb_att_to_get, dtype=int)\n",
+    "    best_poly_att = np.zeros(nb_att_to_get, dtype=int)\n",
+    "    \n",
+    "    for i in range(nb_att_to_get):\n",
     "        best_rmse = 2\n",
-    "        id_best_rmse = None\n",
-    "        for j in range(x.shape[0]):\n",
-    "            w, rmse = poly_regr(x[j], y)\n",
-    "            if rmse < best_rmse and np.argwhere(best_attributes==j).size == 0 :\n",
-    "                best_rmse = rmse\n",
-    "                id_best_rmse = j\n",
-    "        best_attributes[i] = id_best_rmse\n",
+    "        best_att = None\n",
     "\n",
-    "    return best_attributes"
+    "        for id_att in range(nb_att_in_x):\n",
+    "            rmse, poly = get_best_poly(x, y, x_test, y_test, deg, id_att)\n",
+    "           \n",
+    "            if rmse < best_rmse and np.argwhere(indexes_best_att==id_att).size == 0:\n",
+    "                best_rmse = rmse\n",
+    "                best_att = id_att\n",
+    "                best_poly_att[i] = poly\n",
+    "        \n",
+    "    \n",
+    "        indexes_best_att[i] = best_att\n",
+    "        \n",
+    "    return indexes_best_att, best_poly_att"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 635,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_best_attributes(x, y, degree, nb_attributes):\n",
-    "    best_indexes = None\n",
+    "def get_best_poly(x, y, x_test, y_test, deg, id_att):\n",
     "    best_rmse = 2\n",
+    "    best_poly = None\n",
     "    \n",
-    "    for i in range(len(x)):\n",
-    "        indexes = get_best_attributes_from_x(x[i], y[i], degree, nb_attributes)\n",
-    "        w, rmse = poly_regr(x[i], y[i], indexes, degree)\n",
-    "\n",
+    "    for poly in range(1, deg):\n",
+    "        all_w = np.zeros((poly+1, len(x)))\n",
+    "        \n",
+    "        for i in range(len(x)):\n",
+    "            w, rmse = poly_regr(x[i].T[id_att], y[i], degree=poly)\n",
+    "            all_w.T[i] = w\n",
+    "        \n",
+    "        rmse = get_test_rmse(x_test.T[id_att], y_test, poly, all_w)\n",
+    "        \n",
     "        if rmse < best_rmse:\n",
     "            best_rmse = rmse\n",
-    "            best_indexes = indexes   \n",
-    "            \n",
-    "    return best_indexes"
+    "            best_poly = poly\n",
+    "    \n",
+    "    return best_rmse, best_poly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 636,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_all_w(x, y, indexes, degree):\n",
-    "    all_w = np.zeros((len(indexes)*degree+1, len(x)))\n",
+    "def get_test_rmse(x, y, deg, all_w):\n",
+    "    phi = get_phi(x, degree=deg)\n",
+    "    y_pred = phi.dot(all_w)\n",
+    "    y_test_pred_avg = np.mean(y_pred, axis=1)\n",
+    "    rmse = np.sqrt(np.sum((y - y_test_pred_avg)**2)/y.size)\n",
+    "    return rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_all_w(x, y, indexes, poly):\n",
+    "    all_w = np.zeros((np.sum(poly)+1, len(x)))\n",
     "\n",
     "    for i in range(len(x)):\n",
-    "        w, rmse = poly_regr(x[i], y[i], indexes, degree)\n",
+    "        w, rmse = poly_regr(x[i], y[i], indexes, poly)\n",
     "        all_w.T[i] = w\n",
     "        \n",
     "    return all_w"
@@ -143,65 +169,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 637,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------------------------------\n",
+      "Polynomials =  [1]\n",
+      "---------------------------------------------------------\n",
+      "Nombre d'attributs =  1\n",
+      "Variance =  0.02179876293750828\n",
+      "RMSE =  0.7851596940676735\n",
+      "---------------------------------------------------------\n",
+      "Polynomials =  [1 2]\n",
+      "---------------------------------------------------------\n",
+      "Nombre d'attributs =  2\n",
+      "Variance =  0.1481884347217635\n",
+      "RMSE =  0.7571214807742919\n",
+      "---------------------------------------------------------\n",
+      "Polynomials =  [1 2 2]\n",
+      "---------------------------------------------------------\n",
+      "Nombre d'attributs =  3\n",
+      "Variance =  0.15379712690270989\n",
+      "RMSE =  0.7403691575825437\n",
+      "---------------------------------------------------------\n",
+      "Polynomials =  [1 2 2 1]\n",
+      "---------------------------------------------------------\n",
+      "Nombre d'attributs =  4\n",
+      "Variance =  0.19932737219577565\n",
+      "RMSE =  0.7255384721167633\n",
+      "---------------------------------------------------------\n",
+      "Polynomials =  [1 2 2 1 1]\n",
+      "---------------------------------------------------------\n",
+      "Nombre d'attributs =  5\n",
+      "Variance =  0.23613053300579642\n",
+      "RMSE =  0.7288113594335288\n",
+      "---------------------------------------------------------\n",
+      "Polynomials =  [1 2 2 1 1 3]\n",
+      "---------------------------------------------------------\n",
+      "Nombre d'attributs =  6\n",
+      "Variance =  0.2709683147931321\n",
+      "RMSE =  0.7423571465029805\n",
+      "---------------------------------------------------------\n",
+      "Polynomials =  [1 2 2 1 1 3 1]\n",
+      "---------------------------------------------------------\n",
+      "Nombre d'attributs =  7\n",
+      "Variance =  0.27600550957659403\n",
+      "RMSE =  0.7442016155049652\n",
+      "---------------------------------------------------------\n",
+      "Polynomials =  [1 2 2 1 1 3 1 6]\n",
+      "---------------------------------------------------------\n",
+      "Nombre d'attributs =  8\n",
+      "Variance =  0.6598414535889218\n",
+      "RMSE =  0.7228308955662246\n",
+      "---------------------------------------------------------\n",
+      "Polynomials =  [1 2 2 1 1 3 1 6 2]\n",
+      "---------------------------------------------------------\n",
+      "Nombre d'attributs =  9\n",
+      "Variance =  0.7461944602831924\n",
+      "RMSE =  0.7199841646702753\n",
+      "---------------------------------------------------------\n",
+      "Polynomials =  [1 2 2 1 1 3 1 6 2 5]\n",
+      "---------------------------------------------------------\n",
+      "Nombre d'attributs =  10\n",
+      "Variance =  0.8108136173683705\n",
+      "RMSE =  0.6345066540672862\n",
+      "---------------------------------------------------------\n",
+      "Polynomials =  [1 2 2 1 1 3 1 6 2 5 2]\n",
+      "---------------------------------------------------------\n",
+      "Nombre d'attributs =  11\n",
+      "Variance =  1.1171728573234259\n",
+      "RMSE =  0.6291683085517618\n",
+      "---------------------------------------------------------\n",
+      "Polynomials =  [1 2 2 1 1 3 1 6 2 5 2 5]\n",
+      "---------------------------------------------------------\n",
+      "Nombre d'attributs =  12\n",
+      "Variance =  2.959053524496121\n",
+      "RMSE =  0.7283514244497915\n",
+      "---------------------------------------------------------\n",
+      "Polynomials =  [1 2 2 1 1 3 1 6 2 5 2 5 1]\n",
+      "---------------------------------------------------------\n",
+      "Nombre d'attributs =  13\n",
+      "Variance =  11338.915435107378\n",
+      "RMSE =  53.288866167764944\n",
+      "---------------------------------------------------------\n",
+      "Polynomials =  [1 2 2 1 1 3 1 6 2 5 2 5 1 1]\n",
+      "---------------------------------------------------------\n",
+      "Nombre d'attributs =  14\n",
+      "Variance =  22.48504384369482\n",
+      "RMSE =  2.4717548754452627\n"
+     ]
+    }
+   ],
    "source": [
-    "degree = 2\n",
-    "nb_attributes = 5\n",
-    "best_indexes = get_best_attributes(x_train, y_train, degree, nb_attributes)"
+    "deg = 20\n",
+    "nb_att_to_get = 15\n",
+    "\n",
+    "for nb_att in range(1, nb_att_to_get):\n",
+    "    indexes, poly = get_best_att(x_train, y_train, x_test, y_test, nb_att, deg)\n",
+    "    print('---------------------------------------------------------')\n",
+    "    print('Polynomials = ', poly)\n",
+    "    all_w = get_all_w(x_train, y_train, indexes, poly)\n",
+    "    phi = get_phi(x_test, indexes, poly)\n",
+    "    y_pred = phi.dot(all_w)\n",
+    "    y_test_pred_avg = np.mean(y_pred, axis=1)\n",
+    "    rmse = np.sqrt(np.sum((y_test - y_test_pred_avg)**2)/y_test.size)\n",
+    "    var_avg = np.mean(np.var(y_pred, axis=1))\n",
+    "\n",
+    "    print('---------------------------------------------------------')\n",
+    "    print('Nombre d\\'attributs = ', nb_att)\n",
+    "    print('Variance = ', var_avg)\n",
+    "    print('RMSE = ', rmse)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 638,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7208192548835631\n"
+      "0.7079516787816333\n"
      ]
     }
    ],
    "source": [
-    "all_w = get_all_w(x_train, y_train, best_indexes, degree)\n",
-    "phi = get_phi(x_test, best_indexes, degree)\n",
-    "y_pred = phi.dot(all_w)\n",
-    "y_test_pred_avg = np.mean(y_pred, axis=1)\n",
-    "rmse = np.sqrt(np.sum((y_test - y_test_pred_avg)**2)/y_test.size)\n",
-    "\n",
+    "indexes, poly = get_best_att(x_train, y_train, x_test, y_test, 4, 10)\n",
+    "w, rmse = poly_regr(x_n, y_n, indexes, poly)\n",
     "print(rmse)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 639,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "def test_data(x, y, all_w, indexes, degree=1):\n",
     "    phi = get_phi(x, indexes, degree)\n",
     "    y_pred_n = phi.dot(all_w)\n",
-    "    y_test_pred_avg = np.mean(y_pred_n, axis=1)\n",
-    "    y_pred = (y.std() * y_test_pred_avg) + y.mean()\n",
+    "    #y_test_pred_avg = np.mean(y_pred_n, axis=1)\n",
+    "    y_pred = (y.std() * y_pred_n) + y.mean()\n",
     "    \n",
     "    return y_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 640,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = test_data(test_n, y, all_w, best_indexes, degree)"
+    "y_pred = test_data(test_n, y, w, indexes, poly)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 628,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,9 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 0.7486788923831885\n",
-    "# 0.6411587970232053\n",
-    "# 0.556122848172312"
+    "# 0.45847234649673924"
    ]
   }
  ],
